--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_canopen_motor
-	base = 8b4f410
-	trimbase = 
+	base = 29fb852
+	trimbase = 8b4f410
 	parent = upstream
 	previous = f6fedfd
