--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_s300
-	base = b34d0cd
-	trimbase = 
+	base = e4afe9f
+	trimbase = b34d0cd
 	parent = upstream
 	previous = f6fedfd
