--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_voltage_control
-	base = 622acfb
-	trimbase = 
+	base = a9449df
+	trimbase = 622acfb
 	parent = upstream
 	previous = f6fedfd
