--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
 	base = 849ff98
-	trimbase = daeff83
+	trimbase = 
 	parent = upstream
 	previous = 439101e
