--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
-	base = 9bd8eb4
-	trimbase = 
+	base = af3141b
+	trimbase = 9bd8eb4
 	parent = upstream
 	previous = f6fedfd
