--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_relayboard
-	base = bc7bdff
-	trimbase = 
+	base = 3a94a0c
+	trimbase = bc7bdff
 	parent = upstream
 	previous = f6fedfd
