--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hwboard
-	base = 4f4f89e
-	trimbase = 
+	base = a4ea093
+	trimbase = 4f4f89e
 	parent = upstream
 	previous = f6fedfd
