--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_cam3d_throttle
-	base = 6555d4d
-	trimbase = 
+	base = 8c09bf1
+	trimbase = 6555d4d
 	parent = upstream
 	previous = f6fedfd
