--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_collision_velocity_filter
 	base = cda8e2d
-	trimbase = 4374881
+	trimbase = 
 	parent = upstream
 	previous = 439101e
