--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_collision_velocity_filter
-	base = 5eb29d1
-	trimbase = 
+	base = b2bb6fa
+	trimbase = 5eb29d1
 	parent = upstream
 	previous = f6fedfd
