--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_lms1xx
-	base = 68259c0
-	trimbase = 
+	base = 72ff4b0
+	trimbase = 68259c0
 	parent = upstream
 	previous = f6fedfd
