--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_drive_chain
 	base = 050c8a7
-	trimbase = 26a369b
+	trimbase = 
 	parent = upstream
 	previous = 439101e
