--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_drive_chain
-	base = 3fc3cbb
-	trimbase = 
+	base = d824add
+	trimbase = 3fc3cbb
 	parent = upstream
 	previous = f6fedfd
