--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_phidgets
-	base = ef41b88
-	trimbase = 
+	base = 49dbc77
+	trimbase = ef41b88
 	parent = upstream
 	previous = f6fedfd
