--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sound
-	base = 1031447
-	trimbase = 
+	base = 2cc5849
+	trimbase = 1031447
 	parent = upstream
 	previous = f6fedfd
