--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_utilities
-	base = 11e62cd
-	trimbase = 
+	base = 94e7d11
+	trimbase = 11e62cd
 	parent = upstream
 	previous = f6fedfd
