--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hokuyo
-	base = ea3ac89
-	trimbase = 
+	base = bf93a6b
+	trimbase = ea3ac89
 	parent = upstream
 	previous = f6fedfd
