--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_footprint_observer
-	base = 612a1e5
-	trimbase = 
+	base = f4219f3
+	trimbase = 612a1e5
 	parent = upstream
 	previous = f6fedfd
