--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_head_axis
-	base = 4318609
-	trimbase = 
+	base = 01f00ff
+	trimbase = 4318609
 	parent = upstream
 	previous = f6fedfd
