--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_camera_sensors
-	base = fbc60f7
-	trimbase = 
+	base = d4175a8
+	trimbase = fbc60f7
 	parent = upstream
 	previous = f6fedfd
