--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_trajectory_controller
 	base = 27402fb
-	trimbase = 8031251
+	trimbase = 
 	parent = upstream
 	previous = 439101e
