--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,14 @@ install(TARGETS cob_light
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-
 install(DIRECTORY common/include/
-  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
+install(DIRECTORY ros/include/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
+install(PROGRAMS ros/scripts/test.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}/ros/scripts
 )
