--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,8 @@ install(TARGETS ${PROJECT_NAME} cob_scan_filter
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(DIRECTORY common/include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
+
