Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.1": ["Denis \u0160togl", "denis.stogl@kit.edu"], "0.5.2": ["Denis \u0160togl", "denis.stogl@kit.edu"]}
+{"0.5.1": ["Denis \u0160togl", "denis.stogl@kit.edu"], "0.5.2": ["Denis \u0160togl", "denis.stogl@kit.edu"], "0.5.3": ["Denis \u0160togl", "denis.stogl@kit.edu"]}
