--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_relayboard
-	base = ab728bc
-	trimbase = 
+	base = a09cd20
+	trimbase = ab728bc
 	parent = upstream
 	previous = 6d84174
