--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_canopen_motor
-	base = 1a32c37
-	trimbase = 
+	base = 0a278a8
+	trimbase = 1a32c37
 	parent = upstream
 	previous = 6d84174
