--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hwboard
-	base = b72b172
-	trimbase = 
+	base = f06a005
+	trimbase = b72b172
 	parent = upstream
 	previous = 6d84174
