--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_collision_velocity_filter
 	base = b2bb6fa
-	trimbase = 5eb29d1
+	trimbase = 
 	parent = upstream
 	previous = f6fedfd
