--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_collision_velocity_filter
-	base = 0fe6d50
-	trimbase = 
+	base = 3040361
+	trimbase = 0fe6d50
 	parent = upstream
 	previous = 6d84174
