--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_utilities
-	base = 508c031
-	trimbase = 
+	base = 6b06768
+	trimbase = 508c031
 	parent = upstream
 	previous = 6d84174
