--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_voltage_control
-	base = 3eb1244
-	trimbase = 
+	base = 9e60dc4
+	trimbase = 3eb1244
 	parent = upstream
 	previous = 6d84174
