--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_drive_chain
 	base = d824add
-	trimbase = 3fc3cbb
+	trimbase = 
 	parent = upstream
 	previous = f6fedfd
