--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_drive_chain
-	base = 8fd2a99
-	trimbase = 
+	base = 6b4ba9e
+	trimbase = 8fd2a99
 	parent = upstream
 	previous = 6d84174
