--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_s300
-	base = 5630c11
-	trimbase = 
+	base = 14a77b7
+	trimbase = 5630c11
 	parent = upstream
 	previous = 6d84174
