--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_lms1xx
-	base = d6538a6
-	trimbase = 
+	base = 79bddcd
+	trimbase = d6538a6
 	parent = upstream
 	previous = 6d84174
