--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_footprint_observer
 	base = f4219f3
-	trimbase = 612a1e5
+	trimbase = 
 	parent = upstream
 	previous = f6fedfd
