--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_velocity_smoother
 	base = 05cda43
-	trimbase = 318363f
+	trimbase = 
 	parent = upstream
 	previous = f6fedfd
