--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_velocity_smoother
-	base = 294bd3a
-	trimbase = 
+	base = debc14e
+	trimbase = 294bd3a
 	parent = upstream
 	previous = 6d84174
