--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_head_axis
-	base = a7774e7
-	trimbase = 
+	base = c017735
+	trimbase = a7774e7
 	parent = upstream
 	previous = 6d84174
