--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_camera_sensors
-	base = ac47025
-	trimbase = 
+	base = 6ed93de
+	trimbase = ac47025
 	parent = upstream
 	previous = 6d84174
