--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_generic_can
-	base = 82e8c05
-	trimbase = 
+	base = 6b79da0
+	trimbase = 82e8c05
 	parent = upstream
 	previous = 6d84174
