--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_driver
-	base = 17704fa
-	trimbase = 
+	base = 700fbcf
+	trimbase = 17704fa
 	parent = upstream
 	previous = 6d84174
