--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_light
-	base = 0fe4108
-	trimbase = 
+	base = 32bd6e5
+	trimbase = 0fe4108
 	parent = upstream
 	previous = 6d84174
