--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_trajectory_controller
 	base = 6dc2dae
-	trimbase = 5f5b1de
+	trimbase = 
 	parent = upstream
 	previous = f6fedfd
