--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_trajectory_controller
-	base = 0ec6a76
-	trimbase = 
+	base = f89171b
+	trimbase = 0ec6a76
 	parent = upstream
 	previous = 6d84174
