--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_phidgets
-	base = faf5abb
-	trimbase = 
+	base = 05ff467
+	trimbase = faf5abb
 	parent = upstream
 	previous = 6d84174
