--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sound
-	base = e5964a9
-	trimbase = 
+	base = d6fdbd5
+	trimbase = e5964a9
 	parent = upstream
 	previous = 6d84174
