--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hokuyo
-	base = 06fcfda
-	trimbase = 
+	base = 021c47e
+	trimbase = 06fcfda
 	parent = upstream
 	previous = 6d84174
