--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.1": ["Christian Connette", "cpc@ipa.fhg.de"], "0.5.2": ["Christian Connette", "cpc@ipa.fhg.de"], "0.5.3": ["Matthias Gruhler", "mig@ipa.fhg.de"]}
+{"0.5.4": ["Matthias Gruhler", "mig@ipa.fhg.de"], "0.5.1": ["Christian Connette", "cpc@ipa.fhg.de"], "0.5.2": ["Christian Connette", "cpc@ipa.fhg.de"], "0.5.3": ["Matthias Gruhler", "mig@ipa.fhg.de"]}
