--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.1": ["Jan Fischer", "jsf@ipa.fhg.de"], "0.5.2": ["Jan Fischer", "jsf@ipa.fhg.de"], "0.5.3": ["Jan Fischer", "jsf@ipa.fhg.de"]}
+{"0.5.4": ["Jan Fischer", "jsf@ipa.fhg.de"], "0.5.1": ["Jan Fischer", "jsf@ipa.fhg.de"], "0.5.2": ["Jan Fischer", "jsf@ipa.fhg.de"], "0.5.3": ["Jan Fischer", "jsf@ipa.fhg.de"]}
