--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.1": ["Florian Weisshardt", "fmw@ipa.fhg.de"], "0.5.2": ["Florian Weisshardt", "fmw@ipa.fhg.de"], "0.5.3": ["Florian Weisshardt", "fmw@ipa.fhg.de"]}
+{"0.5.4": ["Florian Weisshardt", "fmw@ipa.fhg.de"], "0.5.1": ["Florian Weisshardt", "fmw@ipa.fhg.de"], "0.5.2": ["Florian Weisshardt", "fmw@ipa.fhg.de"], "0.5.3": ["Florian Weisshardt", "fmw@ipa.fhg.de"]}
