--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = baae3a3
+	base = 5821847
 	trimbase = 
 	parent = release/hydro/cob_undercarriage_ctrl
-	previous = 
+	previous = baae3a3
