--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0fd186
+	base = b50d8bd
 	trimbase = 
 	parent = rpm/hydro/cob_undercarriage_ctrl
-	previous = 
+	previous = f0fd186
