--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6ed93de
+	base = d4b2f88
 	trimbase = 
 	parent = release/hydro/cob_camera_sensors
-	previous = 
+	previous = 6ed93de
