--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 18fa583
+	base = db1ace5
 	trimbase = 
 	parent = rpm/hydro/cob_camera_sensors
-	previous = 
+	previous = 18fa583
