--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05ff467
+	base = b9decf8
 	trimbase = 
 	parent = release/hydro/cob_phidgets
-	previous = 
+	previous = 05ff467
