--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e25e51
+	base = 84d0416
 	trimbase = 
 	parent = rpm/hydro/cob_phidgets
-	previous = 
+	previous = 8e25e51
