--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b06768
+	base = 36b7725
 	trimbase = 
 	parent = release/hydro/cob_utilities
-	previous = 
+	previous = 6b06768
