--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26cb042
+	base = 2dd322d
 	trimbase = 
 	parent = rpm/hydro/cob_utilities
-	previous = 
+	previous = 26cb042
