--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3040361
+	base = 8891620
 	trimbase = 
 	parent = release/hydro/cob_collision_velocity_filter
-	previous = 
+	previous = 3040361
