--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b2dff67
+	base = a735b94
 	trimbase = 
 	parent = rpm/hydro/cob_collision_velocity_filter
-	previous = 
+	previous = b2dff67
