--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9e60dc4
+	base = a68d73f
 	trimbase = 
 	parent = release/hydro/cob_voltage_control
-	previous = 
+	previous = 9e60dc4
