--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 38bfba5
+	base = d3bac6b
 	trimbase = 
 	parent = rpm/hydro/cob_voltage_control
-	previous = 
+	previous = 38bfba5
