--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c017735
+	base = 4f4db01
 	trimbase = 
 	parent = release/hydro/cob_head_axis
-	previous = 
+	previous = c017735
