--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1215380
+	base = c8b5e2c
 	trimbase = 
 	parent = rpm/hydro/cob_head_axis
-	previous = 
+	previous = 1215380
