--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b4ba9e
+	base = 51767be
 	trimbase = 
 	parent = release/hydro/cob_base_drive_chain
-	previous = 
+	previous = 6b4ba9e
