--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 10dcda8
+	base = 9e473b0
 	trimbase = 
 	parent = rpm/hydro/cob_base_drive_chain
-	previous = 
+	previous = 10dcda8
