--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = debc14e
+	base = 09d8144
 	trimbase = 
 	parent = release/hydro/cob_base_velocity_smoother
-	previous = 
+	previous = debc14e
