--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f030d32
+	base = c5cfe85
 	trimbase = 
 	parent = rpm/hydro/cob_base_velocity_smoother
-	previous = 
+	previous = f030d32
