--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f06a005
+	base = 8dbced0
 	trimbase = 
 	parent = release/hydro/cob_hwboard
-	previous = 
+	previous = f06a005
