--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f35a68c
+	base = 525fa98
 	trimbase = 
 	parent = rpm/hydro/cob_hwboard
-	previous = 
+	previous = f35a68c
