--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0a278a8
+	base = bd4bf40
 	trimbase = 
 	parent = release/hydro/cob_canopen_motor
-	previous = 
+	previous = 0a278a8
