--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f5edbb2
+	base = 4ebd232
 	trimbase = 
 	parent = rpm/hydro/cob_canopen_motor
-	previous = 
+	previous = f5edbb2
