--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d6fdbd5
+	base = a5b808a
 	trimbase = 
 	parent = release/hydro/cob_sound
-	previous = 
+	previous = d6fdbd5
