--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fc91ae1
+	base = a09a3ca
 	trimbase = 
 	parent = rpm/hydro/cob_sound
-	previous = 
+	previous = fc91ae1
