--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 32bd6e5
+	base = bd5cce1
 	trimbase = 
 	parent = release/hydro/cob_light
-	previous = 
+	previous = 32bd6e5
