--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4335d16
+	base = e579b34
 	trimbase = 
 	parent = rpm/hydro/cob_light
-	previous = 
+	previous = 4335d16
