--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e6f7d17
+	base = ac46cbe
 	trimbase = 
 	parent = release/hydro/cob_footprint_observer
-	previous = 
+	previous = e6f7d17
