--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eae2483
+	base = d73e193
 	trimbase = 
 	parent = rpm/hydro/cob_footprint_observer
-	previous = 
+	previous = eae2483
