--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f89171b
+	base = 6ca69c6
 	trimbase = 
 	parent = release/hydro/cob_trajectory_controller
-	previous = 
+	previous = f89171b
