--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2979820
+	base = 899eaee
 	trimbase = 
 	parent = rpm/hydro/cob_trajectory_controller
-	previous = 
+	previous = 2979820
