--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 021c47e
+	base = 7ae3992
 	trimbase = 
 	parent = release/hydro/cob_hokuyo
-	previous = 
+	previous = 021c47e
