--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e817440
+	base = ab6eb55
 	trimbase = 
 	parent = rpm/hydro/cob_hokuyo
-	previous = 
+	previous = e817440
