--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a09cd20
+	base = bccc68c
 	trimbase = 
 	parent = release/hydro/cob_relayboard
-	previous = 
+	previous = a09cd20
