--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f6b08d
+	base = 114af6e
 	trimbase = 
 	parent = rpm/hydro/cob_relayboard
-	previous = 
+	previous = 2f6b08d
