--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14a77b7
+	base = 02dab4a
 	trimbase = 
 	parent = release/hydro/cob_sick_s300
-	previous = 
+	previous = 14a77b7
