--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2fbef9e
+	base = 5f9c878
 	trimbase = 
 	parent = rpm/hydro/cob_sick_s300
-	previous = 
+	previous = 2fbef9e
