--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36a0178
+	base = d2d058e
 	trimbase = 
 	parent = rpm/hydro/cob_generic_can
-	previous = 
+	previous = 36a0178
