--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 700fbcf
+	base = eb0e450
 	trimbase = 
 	parent = release/hydro/cob_driver
-	previous = 
+	previous = 700fbcf
