--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c5cc8ce
+	base = a074c58
 	trimbase = 
 	parent = rpm/hydro/cob_driver
-	previous = 
+	previous = c5cc8ce
