--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 79bddcd
+	base = 065cb0f
 	trimbase = 
 	parent = release/hydro/cob_sick_lms1xx
-	previous = 
+	previous = 79bddcd
