--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f71283a
+	base = eaa6457
 	trimbase = 
 	parent = rpm/hydro/cob_sick_lms1xx
-	previous = 
+	previous = f71283a
