--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c4bbc73
-	trimbase = 
+	trim = cob_relayboard
+	base = 25c8012
+	trimbase = c4bbc73
 	parent = upstream
 	previous = 30aede5
