--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 37a4d99
-	trimbase = 
+	trim = cob_canopen_motor
+	base = 5d7f94f
+	trimbase = 37a4d99
 	parent = upstream
 	previous = 30aede5
