--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7be3236
-	trimbase = 
+	trim = cob_sick_s300
+	base = 6e459ef
+	trimbase = 7be3236
 	parent = upstream
 	previous = 30aede5
