--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = db1aa13
-	trimbase = 
+	trim = cob_utilities
+	base = 081136a
+	trimbase = db1aa13
 	parent = upstream
 	previous = 30aede5
