--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5556574
-	trimbase = 
+	trim = cob_voltage_control
+	base = 1041c1b
+	trimbase = 5556574
 	parent = upstream
 	previous = 30aede5
