--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = efde020
-	trimbase = 
+	trim = cob_base_drive_chain
+	base = d7a34d4
+	trimbase = efde020
 	parent = upstream
 	previous = 30aede5
