--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = db74050
-	trimbase = 
+	trim = cob_sick_lms1xx
+	base = 7c1bd5d
+	trimbase = db74050
 	parent = upstream
 	previous = 30aede5
