--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4648a06
-	trimbase = 
+	trim = cob_undercarriage_ctrl
+	base = a405ff7
+	trimbase = 4648a06
 	parent = upstream
 	previous = 30aede5
