--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 589a277
-	trimbase = 
+	trim = cob_head_axis
+	base = 708bbb4
+	trimbase = 589a277
 	parent = upstream
 	previous = 30aede5
