--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f72a5c7
-	trimbase = 
+	trim = cob_camera_sensors
+	base = d3d5cf0
+	trimbase = f72a5c7
 	parent = upstream
 	previous = 30aede5
