--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c95eb87
-	trimbase = 
+	trim = cob_generic_can
+	base = 84c4159
+	trimbase = c95eb87
 	parent = upstream
 	previous = 30aede5
