--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7a1636a
-	trimbase = 
+	trim = cob_driver
+	base = eb59b10
+	trimbase = 7a1636a
 	parent = upstream
 	previous = 30aede5
