--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3dab5e5
-	trimbase = 
+	trim = cob_light
+	base = 804d3d3
+	trimbase = 3dab5e5
 	parent = upstream
 	previous = 30aede5
