--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f612c5c
-	trimbase = 
+	trim = cob_phidgets
+	base = dbe5f33
+	trimbase = f612c5c
 	parent = upstream
 	previous = 30aede5
