--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 31c9b95
-	trimbase = 
+	trim = cob_sound
+	base = 0327580
+	trimbase = 31c9b95
 	parent = upstream
 	previous = 30aede5
