--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9d18e78
+	base = 6433481
 	trimbase = 
 	parent = debian/indigo/cob_driver
-	previous = 
+	previous = 9d18e78
