--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 804d3d3
+	base = b579ecf
 	trimbase = 
 	parent = release/indigo/cob_light
-	previous = 
+	previous = 804d3d3
