--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f91c8f2
+	base = af49785
 	trimbase = 
 	parent = debian/indigo/cob_light
-	previous = 
+	previous = f91c8f2
