--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d7a34d4
+	base = 3544526
 	trimbase = 
 	parent = release/indigo/cob_base_drive_chain
-	previous = 
+	previous = d7a34d4
