--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0da3c01
+	base = 1734edf
 	trimbase = 
 	parent = debian/indigo/cob_base_drive_chain
-	previous = 
+	previous = 0da3c01
