--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 94a4011
+	base = 72fdb9b
 	trimbase = 
 	parent = debian/indigo/cob_utilities
-	previous = 
+	previous = 94a4011
