--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c978906
+	base = fe0542d
 	trimbase = 
 	parent = debian/indigo/cob_camera_sensors
-	previous = 
+	previous = c978906
