--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fe0fdd9
+	base = 27a0ece
 	trimbase = 
 	parent = debian/indigo/cob_sound
-	previous = 
+	previous = fe0fdd9
