--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5bbd0d9
+	base = b084219
 	trimbase = 
 	parent = debian/indigo/cob_sick_lms1xx
-	previous = 
+	previous = 5bbd0d9
