--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f6d0228
+	base = 8d318fb
 	trimbase = 
 	parent = debian/indigo/cob_sick_s300
-	previous = 
+	previous = f6d0228
