--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 25c8012
+	base = 31034a4
 	trimbase = 
 	parent = release/indigo/cob_relayboard
-	previous = 
+	previous = 25c8012
