--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d2f0864
+	base = 770d746
 	trimbase = 
 	parent = debian/indigo/cob_relayboard
-	previous = 
+	previous = d2f0864
