--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a405ff7
+	base = 8d38173
 	trimbase = 
 	parent = release/indigo/cob_undercarriage_ctrl
-	previous = 
+	previous = a405ff7
