--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a4aec7
+	base = 8e6d223
 	trimbase = 
 	parent = debian/indigo/cob_undercarriage_ctrl
-	previous = 
+	previous = 6a4aec7
