--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 19fdcc1
+	base = bb3e276
 	trimbase = 
 	parent = debian/indigo/cob_canopen_motor
-	previous = 
+	previous = 19fdcc1
