--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b13b06
+	base = a7ac0f7
 	trimbase = 
 	parent = debian/indigo/cob_voltage_control
-	previous = 
+	previous = 6b13b06
