--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84c4159
+	base = 24e8eae
 	trimbase = 
 	parent = release/indigo/cob_generic_can
-	previous = 
+	previous = 84c4159
