--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9d66d7c
+	base = b819d62
 	trimbase = 
 	parent = debian/indigo/cob_generic_can
-	previous = 
+	previous = 9d66d7c
