--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee39efc
+	base = 4395104
 	trimbase = 
 	parent = debian/indigo/cob_head_axis
-	previous = 
+	previous = ee39efc
