--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eaa912c
+	base = 1360ae7
 	trimbase = 
 	parent = debian/indigo/cob_phidgets
-	previous = 
+	previous = eaa912c
