--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eb59b10
+	base = 3d36980
 	trimbase = 
 	parent = release/indigo/cob_driver
-	previous = 
+	previous = eb59b10
