--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b007e78
+	base = 3c00109
 	trimbase = 
 	parent = rpm/indigo/cob_driver
-	previous = 
+	previous = b007e78
