--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 32f12b1
+	base = 946fd7e
 	trimbase = 
 	parent = rpm/indigo/cob_light
-	previous = 
+	previous = 32f12b1
