--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b8b542d
+	base = d25e6c1
 	trimbase = 
 	parent = rpm/indigo/cob_base_drive_chain
-	previous = 
+	previous = b8b542d
