--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 081136a
+	base = e03a60d
 	trimbase = 
 	parent = release/indigo/cob_utilities
-	previous = 
+	previous = 081136a
