--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d5fc5a
+	base = 84ed73a
 	trimbase = 
 	parent = rpm/indigo/cob_utilities
-	previous = 
+	previous = 6d5fc5a
