--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d3d5cf0
+	base = a9f7688
 	trimbase = 
 	parent = release/indigo/cob_camera_sensors
-	previous = 
+	previous = d3d5cf0
