--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0cee54e
+	base = 5c3242a
 	trimbase = 
 	parent = rpm/indigo/cob_camera_sensors
-	previous = 
+	previous = 0cee54e
