--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0327580
+	base = 88cb768
 	trimbase = 
 	parent = release/indigo/cob_sound
-	previous = 
+	previous = 0327580
