--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d80fbf6
+	base = 2e3030d
 	trimbase = 
 	parent = rpm/indigo/cob_sound
-	previous = 
+	previous = d80fbf6
