--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7c1bd5d
+	base = 694e293
 	trimbase = 
 	parent = release/indigo/cob_sick_lms1xx
-	previous = 
+	previous = 7c1bd5d
