--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 548e3a3
+	base = 3cbb691
 	trimbase = 
 	parent = rpm/indigo/cob_sick_lms1xx
-	previous = 
+	previous = 548e3a3
