--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6e459ef
+	base = 294ee1c
 	trimbase = 
 	parent = release/indigo/cob_sick_s300
-	previous = 
+	previous = 6e459ef
