--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f4a23bc
+	base = 92ef0a7
 	trimbase = 
 	parent = rpm/indigo/cob_sick_s300
-	previous = 
+	previous = f4a23bc
