--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5e86974
+	base = d5ea525
 	trimbase = 
 	parent = rpm/indigo/cob_relayboard
-	previous = 
+	previous = 5e86974
