--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 41ae346
+	base = 267f629
 	trimbase = 
 	parent = rpm/indigo/cob_undercarriage_ctrl
-	previous = 
+	previous = 41ae346
