--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5d7f94f
+	base = 05e3203
 	trimbase = 
 	parent = release/indigo/cob_canopen_motor
-	previous = 
+	previous = 5d7f94f
