--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a0c4089
+	base = 9276aa9
 	trimbase = 
 	parent = rpm/indigo/cob_canopen_motor
-	previous = 
+	previous = a0c4089
