--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1041c1b
+	base = 87bb533
 	trimbase = 
 	parent = release/indigo/cob_voltage_control
-	previous = 
+	previous = 1041c1b
