--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3bb8e72
+	base = 69f0318
 	trimbase = 
 	parent = rpm/indigo/cob_voltage_control
-	previous = 
+	previous = 3bb8e72
