--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ab347de
+	base = e18e25b
 	trimbase = 
 	parent = rpm/indigo/cob_generic_can
-	previous = 
+	previous = ab347de
