--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 708bbb4
+	base = ce401ce
 	trimbase = 
 	parent = release/indigo/cob_head_axis
-	previous = 
+	previous = 708bbb4
