--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 188e456
+	base = a936db1
 	trimbase = 
 	parent = rpm/indigo/cob_head_axis
-	previous = 
+	previous = 188e456
