--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dbe5f33
+	base = a6c6232
 	trimbase = 
 	parent = release/indigo/cob_phidgets
-	previous = 
+	previous = dbe5f33
