--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 093a87e
+	base = da73b96
 	trimbase = 
 	parent = rpm/indigo/cob_phidgets
-	previous = 
+	previous = 093a87e
