--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_relayboard
-	base = cd9476d
-	trimbase = 
+	base = 98468d3
+	trimbase = cd9476d
 	parent = upstream
 	previous = 47ed63a
