--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_canopen_motor
-	base = 9fe39d9
-	trimbase = 
+	base = d7a1c92
+	trimbase = 9fe39d9
 	parent = upstream
 	previous = 47ed63a
