--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hwboard
-	base = db4f0d4
-	trimbase = 
+	base = df3fa9e
+	trimbase = db4f0d4
 	parent = upstream
 	previous = 47ed63a
