--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_collision_velocity_filter
-	base = 914aa29
-	trimbase = 
+	base = 45a038b
+	trimbase = 914aa29
 	parent = upstream
 	previous = 47ed63a
