--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_utilities
-	base = 460608f
-	trimbase = 
+	base = 30a2235
+	trimbase = 460608f
 	parent = upstream
 	previous = 47ed63a
