--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_voltage_control
-	base = d908bba
-	trimbase = 
+	base = fcffd68
+	trimbase = d908bba
 	parent = upstream
 	previous = 47ed63a
