--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_drive_chain
-	base = 48a00c8
-	trimbase = 
+	base = 9a6a0ea
+	trimbase = 48a00c8
 	parent = upstream
 	previous = 47ed63a
