--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_s300
-	base = efae529
-	trimbase = 
+	base = 6922f53
+	trimbase = efae529
 	parent = upstream
 	previous = 47ed63a
