--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_lms1xx
-	base = 8f15376
-	trimbase = 
+	base = e4146e6
+	trimbase = 8f15376
 	parent = upstream
 	previous = 47ed63a
