--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_footprint_observer
 	base = e6f7d17
-	trimbase = d1d9567
+	trimbase = 
 	parent = upstream
 	previous = 6d84174
