--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_footprint_observer
-	base = 85dc9a7
-	trimbase = 
+	base = 106c9f1
+	trimbase = 85dc9a7
 	parent = upstream
 	previous = 47ed63a
