--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_velocity_smoother
 	base = debc14e
-	trimbase = 294bd3a
+	trimbase = 
 	parent = upstream
 	previous = 6d84174
