--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_velocity_smoother
-	base = 5c1876a
-	trimbase = 
+	base = 252be67
+	trimbase = 5c1876a
 	parent = upstream
 	previous = 47ed63a
