--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
 	base = baae3a3
-	trimbase = e29eb58
+	trimbase = 
 	parent = upstream
 	previous = 6d84174
