--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
-	base = 6405373
-	trimbase = 
+	base = b0bb1e6
+	trimbase = 6405373
 	parent = upstream
 	previous = 47ed63a
