--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_head_axis
-	base = fb6737b
-	trimbase = 
+	base = 8b985aa
+	trimbase = fb6737b
 	parent = upstream
 	previous = 47ed63a
