--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_camera_sensors
-	base = bf63cec
-	trimbase = 
+	base = d087db4
+	trimbase = bf63cec
 	parent = upstream
 	previous = 47ed63a
