--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_generic_can
-	base = e69d963
-	trimbase = 
+	base = 93c025d
+	trimbase = e69d963
 	parent = upstream
 	previous = 47ed63a
