--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_driver
-	base = bf7f4ea
-	trimbase = 
+	base = 49af4ce
+	trimbase = bf7f4ea
 	parent = upstream
 	previous = 47ed63a
