--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_light
-	base = 7b03d55
-	trimbase = 
+	base = ab7cccd
+	trimbase = 7b03d55
 	parent = upstream
 	previous = 47ed63a
