--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_trajectory_controller
 	base = f89171b
-	trimbase = 0ec6a76
+	trimbase = 
 	parent = upstream
 	previous = 6d84174
