--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_trajectory_controller
-	base = 5169cc3
-	trimbase = 
+	base = 322b5f7
+	trimbase = 5169cc3
 	parent = upstream
 	previous = 47ed63a
