--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_phidgets
-	base = b17feee
-	trimbase = 
+	base = e3e3e3c
+	trimbase = b17feee
 	parent = upstream
 	previous = 47ed63a
