--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sound
-	base = d24d4cb
-	trimbase = 
+	base = ae3280c
+	trimbase = d24d4cb
 	parent = upstream
 	previous = 47ed63a
