--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hokuyo
-	base = ae307dd
-	trimbase = 
+	base = 97f49a1
+	trimbase = ae307dd
 	parent = upstream
 	previous = 47ed63a
