--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.4-0": ["Mon Aug 25 2014", "Florian Weisshardt", "fmw@ipa.fhg.de"]}
+{"0.5.4-0": ["Mon Aug 25 2014", "Florian Weisshardt", "fmw@ipa.fhg.de"], "0.5.5-0": ["Thu Aug 28 2014", "Florian Weisshardt", "fmw@ipa.fhg.de"]}
