--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_relayboard
-	base = fdec820
-	trimbase = 
+	base = 94af71e
+	trimbase = fdec820
 	parent = upstream
 	previous = a8f6eb0
