--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_canopen_motor
-	base = 88c6696
-	trimbase = 
+	base = 18c5483
+	trimbase = 88c6696
 	parent = upstream
 	previous = a8f6eb0
