--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_utilities
-	base = 1a71ee7
-	trimbase = 
+	base = 36781b5
+	trimbase = 1a71ee7
 	parent = upstream
 	previous = a8f6eb0
