--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_voltage_control
-	base = 3894d75
-	trimbase = 
+	base = 2462373
+	trimbase = 3894d75
 	parent = upstream
 	previous = a8f6eb0
