--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_drive_chain
-	base = 275be89
-	trimbase = 
+	base = 03671d3
+	trimbase = 275be89
 	parent = upstream
 	previous = a8f6eb0
