--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
 	base = a405ff7
-	trimbase = 4648a06
+	trimbase = 
 	parent = upstream
 	previous = 30aede5
