--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
-	base = dee5402
-	trimbase = 
+	base = 8f2c044
+	trimbase = dee5402
 	parent = upstream
 	previous = a8f6eb0
