--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_head_axis
-	base = 0fbadc3
-	trimbase = 
+	base = 3fe591c
+	trimbase = 0fbadc3
 	parent = upstream
 	previous = a8f6eb0
