--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_camera_sensors
-	base = 3053b3c
-	trimbase = 
+	base = bc588dc
+	trimbase = 3053b3c
 	parent = upstream
 	previous = a8f6eb0
