--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_generic_can
-	base = 14757ce
-	trimbase = 
+	base = 0e12d32
+	trimbase = 14757ce
 	parent = upstream
 	previous = a8f6eb0
