--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_driver
-	base = a5f4d79
-	trimbase = 
+	base = 21050c2
+	trimbase = a5f4d79
 	parent = upstream
 	previous = a8f6eb0
