--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_light
-	base = 02cf809
-	trimbase = 
+	base = c2e3b1d
+	trimbase = 02cf809
 	parent = upstream
 	previous = a8f6eb0
